--- a/series.conf
+++ b/series.conf
@@ -13471,6 +13471,7 @@
 	patches.suse/0461-drm-i915-dsb-Introduce-intel_dsb_noop.patch
 	patches.suse/0462-drm-i915-dsb-Introduce-intel_dsb_reg_write_masked.patch
 	patches.suse/0463-drm-i915-dsb-Add-support-for-non-posted-DSB-register.patch
+	patches.suse/0464-drm-i915-dsb-Don-t-use-DSB-to-load-the-LUTs-during-f.patch
 	patches.suse/drm-Add-HPD-state-to-drm_connector_oob_hotplug_event.patch
 	patches.suse/gpu-host1x-Correct-allocated-size-for-contexts.patch
 	patches.suse/drm-i915-Add-missing-CCS-documentation.patch
