--- a/series.conf
+++ b/series.conf
@@ -13474,6 +13474,7 @@
 	patches.suse/0464-drm-i915-dsb-Don-t-use-DSB-to-load-the-LUTs-during-f.patch
 	patches.suse/0465-drm-i915-dsb-Load-LUTs-using-the-DSB-during-vblank.patch
 	patches.suse/0466-drm-i915-dsb-Use-non-posted-register-writes-for-lega.patch
+	patches.suse/0467-drm-i915-dsb-Evade-transcoder-undelayed-vblank-when-.patch
 	patches.suse/drm-Add-HPD-state-to-drm_connector_oob_hotplug_event.patch
 	patches.suse/gpu-host1x-Correct-allocated-size-for-contexts.patch
 	patches.suse/drm-i915-Add-missing-CCS-documentation.patch
