--- a/series.conf
+++ b/series.conf
@@ -13477,6 +13477,7 @@
 	patches.suse/0467-drm-i915-dsb-Evade-transcoder-undelayed-vblank-when-.patch
 	patches.suse/0468-drm-i915-Introduce-skl_watermark_max_latency.patch
 	patches.suse/0469-drm-i915-Introduce-intel_crtc_scanline_to_hw.patch
+	patches.suse/0470-drm-i915-dsb-Use-DEwake-to-combat-PkgC-latency.patch
 	patches.suse/drm-Add-HPD-state-to-drm_connector_oob_hotplug_event.patch
 	patches.suse/gpu-host1x-Correct-allocated-size-for-contexts.patch
 	patches.suse/drm-i915-Add-missing-CCS-documentation.patch
