--- a/series.conf
+++ b/series.conf
@@ -13482,6 +13482,7 @@
 	patches.suse/0472-drm-i915-dp-Track-the-pipe-and-link-bpp-limits-separ.patch
 	patches.suse/0473-drm-i915-dp-Skip-computing-a-non-DSC-link-config-if-.patch
 	patches.suse/0474-drm-i915-dp-Update-the-link-bpp-limits-for-DSC-mode.patch
+	patches.suse/0475-drm-i915-dp-Limit-the-output-link-bpp-in-DSC-mode.patch
 	patches.suse/drm-Add-HPD-state-to-drm_connector_oob_hotplug_event.patch
 	patches.suse/gpu-host1x-Correct-allocated-size-for-contexts.patch
 	patches.suse/drm-i915-Add-missing-CCS-documentation.patch
