--- a/series.conf
+++ b/series.conf
@@ -13484,6 +13484,7 @@
 	patches.suse/0474-drm-i915-dp-Update-the-link-bpp-limits-for-DSC-mode.patch
 	patches.suse/0475-drm-i915-dp-Limit-the-output-link-bpp-in-DSC-mode.patch
 	patches.suse/0476-drm-i915-Add-helper-to-modeset-a-set-of-pipes.patch
+	patches.suse/0477-drm-i915-Rename-intel_modeset_all_pipes-to-intel_mod.patch
 	patches.suse/drm-Add-HPD-state-to-drm_connector_oob_hotplug_event.patch
 	patches.suse/gpu-host1x-Correct-allocated-size-for-contexts.patch
 	patches.suse/drm-i915-Add-missing-CCS-documentation.patch
