--- a/series.conf
+++ b/series.conf
@@ -13486,6 +13486,7 @@
 	patches.suse/0476-drm-i915-Add-helper-to-modeset-a-set-of-pipes.patch
 	patches.suse/0477-drm-i915-Rename-intel_modeset_all_pipes-to-intel_mod.patch
 	patches.suse/0478-drm-i915-Factor-out-a-helper-to-check-compute-all-th.patch
+	patches.suse/0479-drm-i915-Add-helpers-for-BW-management-on-shared-dis.patch
 	patches.suse/drm-Add-HPD-state-to-drm_connector_oob_hotplug_event.patch
 	patches.suse/gpu-host1x-Correct-allocated-size-for-contexts.patch
 	patches.suse/drm-i915-Add-missing-CCS-documentation.patch
