--- a/series.conf
+++ b/series.conf
@@ -13488,6 +13488,7 @@
 	patches.suse/0478-drm-i915-Factor-out-a-helper-to-check-compute-all-th.patch
 	patches.suse/0479-drm-i915-Add-helpers-for-BW-management-on-shared-dis.patch
 	patches.suse/0480-drm-i915-fdi-Improve-FDI-BW-sharing-between-pipe-B-a.patch
+	patches.suse/0481-drm-i915-fdi-Recompute-state-for-affected-CRTCs-on-F.patch
 	patches.suse/drm-Add-HPD-state-to-drm_connector_oob_hotplug_event.patch
 	patches.suse/gpu-host1x-Correct-allocated-size-for-contexts.patch
 	patches.suse/drm-i915-Add-missing-CCS-documentation.patch
