--- a/series.conf
+++ b/series.conf
@@ -13651,6 +13651,7 @@
 	patches.suse/0640-drm-amdgpu-Fix-kcalloc-over-kzalloc-in-gmc_v9_0_init.patch
 	patches.suse/0641-drm-amd-pm-fix-error-flow-in-sensor-fetching.patch
 	patches.suse/0642-drm-amd-pm-Fixes-incorrect-type-in-amdgpu_hwmon_show.patch
+	patches.suse/0643-drm-amd-pm-Vangogh-Get-average_-from-average-field-o.patch
 	patches.suse/drm-amd-amdgpu-amdgpu_doorbell_mgr-Correct-misdocume.patch
 	patches.suse/drm-radeon-Remove-the-references-of-radeon_gem_-prea.patch
 	patches.suse/drm-amdkfd-ratelimited-SQ-interrupt-messages.patch
