--- a/series.conf
+++ b/series.conf
@@ -13654,6 +13654,7 @@
 	patches.suse/0643-drm-amd-pm-Vangogh-Get-average_-from-average-field-o.patch
 	patches.suse/0644-drm-amdgpu-pm-Remove-the-duplicate-dpm-status-check.patch
 	patches.suse/0645-drm-amd-pm-correct-SMU13-gfx-voltage-related-OD-sett.patch
+	patches.suse/0646-drm-amd-pm-fulfill-the-support-for-SMU13-pp_dpm_dcef.patch
 	patches.suse/drm-amd-amdgpu-amdgpu_doorbell_mgr-Correct-misdocume.patch
 	patches.suse/drm-radeon-Remove-the-references-of-radeon_gem_-prea.patch
 	patches.suse/drm-amdkfd-ratelimited-SQ-interrupt-messages.patch
