--- a/series.conf
+++ b/series.conf
@@ -13658,6 +13658,7 @@
 	patches.suse/0647-amdgpu-pm-Replace-print_clock_levels-with-emit_clock.patch
 	patches.suse/0648-drm-amdgpu-Allow-issue-disable-gfx-ras-cmd-to-firmwa.patch
 	patches.suse/0649-drm-amdgpu-Explicitly-add-a-flexible-array-at-the-en.patch
+	patches.suse/0650-drm-amdgpu-Remove-a-redundant-sanity-check.patch
 	patches.suse/drm-amd-amdgpu-amdgpu_doorbell_mgr-Correct-misdocume.patch
 	patches.suse/drm-radeon-Remove-the-references-of-radeon_gem_-prea.patch
 	patches.suse/drm-amdkfd-ratelimited-SQ-interrupt-messages.patch
