--- a/series.conf
+++ b/series.conf
@@ -13660,6 +13660,7 @@
 	patches.suse/0649-drm-amdgpu-Explicitly-add-a-flexible-array-at-the-en.patch
 	patches.suse/0650-drm-amdgpu-Remove-a-redundant-sanity-check.patch
 	patches.suse/0651-drm-amdgpu-Remove-amdgpu_bo_list_array_entry.patch
+	patches.suse/0652-drm-amdgpu-Use-kvzalloc-to-simplify-code.patch
 	patches.suse/drm-amd-amdgpu-amdgpu_doorbell_mgr-Correct-misdocume.patch
 	patches.suse/drm-radeon-Remove-the-references-of-radeon_gem_-prea.patch
 	patches.suse/drm-amdkfd-ratelimited-SQ-interrupt-messages.patch
