--- a/series.conf
+++ b/series.conf
@@ -13662,6 +13662,7 @@
 	patches.suse/0651-drm-amdgpu-Remove-amdgpu_bo_list_array_entry.patch
 	patches.suse/0652-drm-amdgpu-Use-kvzalloc-to-simplify-code.patch
 	patches.suse/0653-drm-amd-Fix-spelling-mistake-throtting-throttling.patch
+	patches.suse/0654-drm-radeon-radeon_ttm-Remove-unused-variable-rbo-fro.patch
 	patches.suse/drm-amd-amdgpu-amdgpu_doorbell_mgr-Correct-misdocume.patch
 	patches.suse/drm-radeon-Remove-the-references-of-radeon_gem_-prea.patch
 	patches.suse/drm-amdkfd-ratelimited-SQ-interrupt-messages.patch
