--- a/series.conf
+++ b/series.conf
@@ -13664,6 +13664,7 @@
 	patches.suse/0653-drm-amd-Fix-spelling-mistake-throtting-throttling.patch
 	patches.suse/0654-drm-radeon-radeon_ttm-Remove-unused-variable-rbo-fro.patch
 	patches.suse/0655-drm-amd-amdgpu-amdgpu_device-Provide-suitable-descri.patch
+	patches.suse/0656-drm-amd-amdgpu-amdgpu_ras-Increase-buffer-size-to-ac.patch
 	patches.suse/drm-amd-amdgpu-amdgpu_doorbell_mgr-Correct-misdocume.patch
 	patches.suse/drm-radeon-Remove-the-references-of-radeon_gem_-prea.patch
 	patches.suse/drm-amdkfd-ratelimited-SQ-interrupt-messages.patch
