--- a/series.conf
+++ b/series.conf
@@ -13666,6 +13666,7 @@
 	patches.suse/0655-drm-amd-amdgpu-amdgpu_device-Provide-suitable-descri.patch
 	patches.suse/0656-drm-amd-amdgpu-amdgpu_ras-Increase-buffer-size-to-ac.patch
 	patches.suse/0657-drm-amd-amdgpu-amdgpu_sdma-Increase-buffer-size-to-a.patch
+	patches.suse/0658-drm-amd-amdgpu-imu_v11_0-Increase-buffer-size-to-ens.patch
 	patches.suse/drm-amd-amdgpu-amdgpu_doorbell_mgr-Correct-misdocume.patch
 	patches.suse/drm-radeon-Remove-the-references-of-radeon_gem_-prea.patch
 	patches.suse/drm-amdkfd-ratelimited-SQ-interrupt-messages.patch
