--- a/series.conf
+++ b/series.conf
@@ -13669,6 +13669,7 @@
 	patches.suse/0658-drm-amd-amdgpu-imu_v11_0-Increase-buffer-size-to-ens.patch
 	patches.suse/drm-amd-amdgpu-amdgpu_doorbell_mgr-Correct-misdocume.patch
 	patches.suse/0660-drm-amdgpu-add-header-files-for-MP-14.0.0.patch
+	patches.suse/0661-drm-amd-display-Add-support-for-1080p-SubVP-to-reduc.patch
 	patches.suse/drm-radeon-Remove-the-references-of-radeon_gem_-prea.patch
 	patches.suse/drm-amdkfd-ratelimited-SQ-interrupt-messages.patch
 	patches.suse/drm-amd-display-remove-useless-check-in-should_enabl.patch
