--- a/series.conf
+++ b/series.conf
@@ -13671,6 +13671,7 @@
 	patches.suse/0660-drm-amdgpu-add-header-files-for-MP-14.0.0.patch
 	patches.suse/0661-drm-amd-display-Add-support-for-1080p-SubVP-to-reduc.patch
 	patches.suse/0662-drm-amd-display-add-comments-to-add-plane-functions.patch
+	patches.suse/0663-drm-amd-display-rename-function-to-add-otg-master-fo.patch
 	patches.suse/drm-radeon-Remove-the-references-of-radeon_gem_-prea.patch
 	patches.suse/drm-amdkfd-ratelimited-SQ-interrupt-messages.patch
 	patches.suse/drm-amd-display-remove-useless-check-in-should_enabl.patch
