--- a/series.conf
+++ b/series.conf
@@ -13673,6 +13673,7 @@
 	patches.suse/0662-drm-amd-display-add-comments-to-add-plane-functions.patch
 	patches.suse/0663-drm-amd-display-rename-function-to-add-otg-master-fo.patch
 	patches.suse/0664-drm-amd-display-add-new-resource-interface-for-acqui.patch
+	patches.suse/0665-drm-amd-display-add-new-resource-interfaces-to-updat.patch
 	patches.suse/drm-radeon-Remove-the-references-of-radeon_gem_-prea.patch
 	patches.suse/drm-amdkfd-ratelimited-SQ-interrupt-messages.patch
 	patches.suse/drm-amd-display-remove-useless-check-in-should_enabl.patch
