--- a/series.conf
+++ b/series.conf
@@ -13674,6 +13674,7 @@
 	patches.suse/0663-drm-amd-display-rename-function-to-add-otg-master-fo.patch
 	patches.suse/0664-drm-amd-display-add-new-resource-interface-for-acqui.patch
 	patches.suse/0665-drm-amd-display-add-new-resource-interfaces-to-updat.patch
+	patches.suse/0666-drm-amd-display-add-more-pipe-resource-interfaces.patch
 	patches.suse/drm-radeon-Remove-the-references-of-radeon_gem_-prea.patch
 	patches.suse/drm-amdkfd-ratelimited-SQ-interrupt-messages.patch
 	patches.suse/drm-amd-display-remove-useless-check-in-should_enabl.patch
