--- a/series.conf
+++ b/series.conf
@@ -13675,6 +13675,7 @@
 	patches.suse/0664-drm-amd-display-add-new-resource-interface-for-acqui.patch
 	patches.suse/0665-drm-amd-display-add-new-resource-interfaces-to-updat.patch
 	patches.suse/0666-drm-amd-display-add-more-pipe-resource-interfaces.patch
+	patches.suse/0667-drm-amd-display-use-new-pipe-allocation-interface-in.patch
 	patches.suse/drm-radeon-Remove-the-references-of-radeon_gem_-prea.patch
 	patches.suse/drm-amdkfd-ratelimited-SQ-interrupt-messages.patch
 	patches.suse/drm-amd-display-remove-useless-check-in-should_enabl.patch
