--- a/series.conf
+++ b/series.conf
@@ -13677,6 +13677,7 @@
 	patches.suse/0666-drm-amd-display-add-more-pipe-resource-interfaces.patch
 	patches.suse/0667-drm-amd-display-use-new-pipe-allocation-interface-in.patch
 	patches.suse/0668-drm-amd-display-switch-to-new-ODM-policy-for-windowe.patch
+	patches.suse/0669-drm-amd-display-add-pipe-topology-update-log.patch
 	patches.suse/drm-radeon-Remove-the-references-of-radeon_gem_-prea.patch
 	patches.suse/drm-amdkfd-ratelimited-SQ-interrupt-messages.patch
 	patches.suse/drm-amd-display-remove-useless-check-in-should_enabl.patch
