--- a/series.conf
+++ b/series.conf
@@ -13678,6 +13678,7 @@
 	patches.suse/0667-drm-amd-display-use-new-pipe-allocation-interface-in.patch
 	patches.suse/0668-drm-amd-display-switch-to-new-ODM-policy-for-windowe.patch
 	patches.suse/0669-drm-amd-display-add-pipe-topology-update-log.patch
+	patches.suse/0670-drm-amd-display-Skip-dmub-memory-flush-when-not-need.patch
 	patches.suse/drm-radeon-Remove-the-references-of-radeon_gem_-prea.patch
 	patches.suse/drm-amdkfd-ratelimited-SQ-interrupt-messages.patch
 	patches.suse/drm-amd-display-remove-useless-check-in-should_enabl.patch
