--- a/series.conf
+++ b/series.conf
@@ -13684,6 +13684,7 @@
 	patches.suse/0673-drm-amd-display-Add-debugfs-interface-for-ODM-combin.patch
 	patches.suse/0674-drm-amd-display-fix-pipe-topology-logging-error.patch
 	patches.suse/0675-drm-amd-display-3.2.249.patch
+	patches.suse/0676-drm-amd-display-Fix-up-kdoc-format-for-dc_set_edp_po.patch
 	patches.suse/drm-radeon-Remove-the-references-of-radeon_gem_-prea.patch
 	patches.suse/drm-amdkfd-ratelimited-SQ-interrupt-messages.patch
 	patches.suse/drm-amd-display-remove-useless-check-in-should_enabl.patch
