--- a/series.conf
+++ b/series.conf
@@ -13686,6 +13686,7 @@
 	patches.suse/0675-drm-amd-display-3.2.249.patch
 	patches.suse/0676-drm-amd-display-Fix-up-kdoc-format-for-dc_set_edp_po.patch
 	patches.suse/drm-radeon-Remove-the-references-of-radeon_gem_-prea.patch
+	patches.suse/0678-drm-amd-display-Add-dcn35-register-header-files.patch
 	patches.suse/drm-amdkfd-ratelimited-SQ-interrupt-messages.patch
 	patches.suse/drm-amd-display-remove-useless-check-in-should_enabl.patch
 	patches.suse/drm-amdgpu-Fix-refclk-reporting-for-SMU-v13.0.6.patch
