--- a/series.conf
+++ b/series.conf
@@ -13688,6 +13688,7 @@
 	patches.suse/drm-radeon-Remove-the-references-of-radeon_gem_-prea.patch
 	patches.suse/0678-drm-amd-display-Add-dcn35-register-header-files.patch
 	patches.suse/0679-drm-amd-display-Add-DCN35-family-information.patch
+	patches.suse/0680-drm-amd-display-Update-DCE-for-DCN35-support.patch
 	patches.suse/drm-amdkfd-ratelimited-SQ-interrupt-messages.patch
 	patches.suse/drm-amd-display-remove-useless-check-in-should_enabl.patch
 	patches.suse/drm-amdgpu-Fix-refclk-reporting-for-SMU-v13.0.6.patch
