--- a/series.conf
+++ b/series.conf
@@ -13690,6 +13690,7 @@
 	patches.suse/0679-drm-amd-display-Add-DCN35-family-information.patch
 	patches.suse/0680-drm-amd-display-Update-DCE-for-DCN35-support.patch
 	patches.suse/0681-drm-amd-display-Update-DCN10-for-DCN35-support.patch
+	patches.suse/0682-drm-amd-display-Update-DCN20-for-DCN35-support.patch
 	patches.suse/drm-amdkfd-ratelimited-SQ-interrupt-messages.patch
 	patches.suse/drm-amd-display-remove-useless-check-in-should_enabl.patch
 	patches.suse/drm-amdgpu-Fix-refclk-reporting-for-SMU-v13.0.6.patch
