--- a/series.conf
+++ b/series.conf
@@ -13693,6 +13693,7 @@
 	patches.suse/0682-drm-amd-display-Update-DCN20-for-DCN35-support.patch
 	patches.suse/0683-drm-amd-display-Update-DCN30-for-DCN35-support.patch
 	patches.suse/0684-drm-amd-display-Update-DCN31-for-DCN35-support.patch
+	patches.suse/0685-drm-amd-display-Update-DCN314-for-DCN35-support.patch
 	patches.suse/drm-amdkfd-ratelimited-SQ-interrupt-messages.patch
 	patches.suse/drm-amd-display-remove-useless-check-in-should_enabl.patch
 	patches.suse/drm-amdgpu-Fix-refclk-reporting-for-SMU-v13.0.6.patch
