--- a/series.conf
+++ b/series.conf
@@ -13697,6 +13697,7 @@
 	patches.suse/0686-drm-amd-display-Update-DCN32-for-DCN35-support.patch
 	patches.suse/0687-drm-amd-display-Update-dc.h-for-DCN35-support.patch
 	patches.suse/0688-drm-amd-display-Add-DCN35-BIOS-command-table-support.patch
+	patches.suse/0689-drm-amd-display-Add-DCN35-GPIO.patch
 	patches.suse/drm-amdkfd-ratelimited-SQ-interrupt-messages.patch
 	patches.suse/drm-amd-display-remove-useless-check-in-should_enabl.patch
 	patches.suse/drm-amdgpu-Fix-refclk-reporting-for-SMU-v13.0.6.patch
