--- a/series.conf
+++ b/series.conf
@@ -13703,6 +13703,7 @@
 	patches.suse/0692-drm-amd-display-Add-DCN35-PG_CNTL.patch
 	patches.suse/0693-drm-amd-display-Add-DCN35-OPTC.patch
 	patches.suse/0694-drm-amd-display-Add-DCN35-OPP.patch
+	patches.suse/0695-drm-amd-display-Add-DCN35-DPP.patch
 	patches.suse/drm-amdkfd-ratelimited-SQ-interrupt-messages.patch
 	patches.suse/drm-amd-display-remove-useless-check-in-should_enabl.patch
 	patches.suse/drm-amdgpu-Fix-refclk-reporting-for-SMU-v13.0.6.patch
