--- a/series.conf
+++ b/series.conf
@@ -13708,6 +13708,7 @@
 	patches.suse/0697-drm-amd-display-Add-DCN35-HUBP.patch
 	patches.suse/0698-drm-amd-display-Add-DCN35-HUBBUB.patch
 	patches.suse/0699-drm-amd-display-Add-DCN35-MMHUBBUB.patch
+	patches.suse/0700-drm-amd-display-Add-DCN35-DSC.patch
 	patches.suse/drm-amdkfd-ratelimited-SQ-interrupt-messages.patch
 	patches.suse/drm-amd-display-remove-useless-check-in-should_enabl.patch
 	patches.suse/drm-amdgpu-Fix-refclk-reporting-for-SMU-v13.0.6.patch
