--- a/series.conf
+++ b/series.conf
@@ -13714,6 +13714,7 @@
 	patches.suse/0703-drm-amd-display-Add-DCN35-IRQ.patch
 	patches.suse/0704-drm-amd-display-Add-DCN35-DMUB.patch
 	patches.suse/0705-drm-amd-display-Add-DCN35-init.patch
+	patches.suse/0706-drm-amd-display-Add-DCN35-Resource.patch
 	patches.suse/drm-amdkfd-ratelimited-SQ-interrupt-messages.patch
 	patches.suse/drm-amd-display-remove-useless-check-in-should_enabl.patch
 	patches.suse/drm-amdgpu-Fix-refclk-reporting-for-SMU-v13.0.6.patch
