--- a/series.conf
+++ b/series.conf
@@ -13890,6 +13890,7 @@
 	patches.suse/0879-drm-amd-display-fix-some-non-initialized-register-ma.patch
 	patches.suse/0880-drm-amd-display-Fix-MST-recognizes-connected-display.patch
 	patches.suse/0881-drm-amd-display-FW-Promotion-Release-0.0.183.0.patch
+	patches.suse/0882-drm-amd-display-3.2.251.patch
 	patches.suse/drm-amdkfd-Remove-svm-range-validated_once-flag.patch
 	patches.suse/drm-amdgpu-Increase-IH-soft-ring-size-for-GFX-v9.4.3.patch
 	patches.suse/drm-amdkfd-fix-some-race-conditions-in-vram-buffer-a.patch
