--- a/series.conf
+++ b/series.conf
@@ -13893,6 +13893,7 @@
 	patches.suse/0882-drm-amd-display-3.2.251.patch
 	patches.suse/0883-drm-amdgpu-jpeg-skip-set-pg-for-sriov.patch
 	patches.suse/0884-drm-amdgpu-Fix-false-positive-error-log.patch
+	patches.suse/0885-drm-amdgpu-update-IP-count-INFO-query.patch
 	patches.suse/drm-amdkfd-Remove-svm-range-validated_once-flag.patch
 	patches.suse/drm-amdgpu-Increase-IH-soft-ring-size-for-GFX-v9.4.3.patch
 	patches.suse/drm-amdkfd-fix-some-race-conditions-in-vram-buffer-a.patch
