--- a/series.conf
+++ b/series.conf
@@ -13895,6 +13895,7 @@
 	patches.suse/0884-drm-amdgpu-Fix-false-positive-error-log.patch
 	patches.suse/0885-drm-amdgpu-update-IP-count-INFO-query.patch
 	patches.suse/0886-drm-amd-pm-Round-Q10-format-values-in-SMU-v13.0.6.patch
+	patches.suse/0887-drm-amd-pm-Remove-SMUv13.0.6-unsupported-feature.patch
 	patches.suse/drm-amdkfd-Remove-svm-range-validated_once-flag.patch
 	patches.suse/drm-amdgpu-Increase-IH-soft-ring-size-for-GFX-v9.4.3.patch
 	patches.suse/drm-amdkfd-fix-some-race-conditions-in-vram-buffer-a.patch
