--- a/series.conf
+++ b/series.conf
@@ -14075,6 +14075,7 @@
 	patches.suse/1064-drm-amd-display-add-check-in-validate_only-in-dml2.patch
 	patches.suse/1065-drm-amdgpu-update-ib-start-and-size-alignment.patch
 	patches.suse/1066-drm-amdgpu-enable-FRU-device-for-SMU-v13.0.6.patch
+	patches.suse/1067-drm-amdgpu-Refactor-FRU-product-information.patch
 	patches.suse/drm-amdgpu-Fix-potential-null-pointer-derefernce.patch
 	patches.suse/drm-amd-display-Don-t-use-fsleep-for-PSR-exit-waits.patch
 	patches.suse/drm-amdkfd-get-doorbell-s-absolute-offset-based-on-t.patch
