--- a/series.conf
+++ b/series.conf
@@ -14081,6 +14081,7 @@
 	patches.suse/1070-drm-amd-display-enable-S-G-display-for-for-recent-AP.patch
 	patches.suse/drm-amdgpu-Fix-potential-null-pointer-derefernce.patch
 	patches.suse/1072-drm-amd-display-Modify-SMU-message-logs.patch
+	patches.suse/1073-drm-amd-display-VSIF-v3-set-Max-Refresh-Rate.patch
 	patches.suse/drm-amd-display-Don-t-use-fsleep-for-PSR-exit-waits.patch
 	patches.suse/drm-amdkfd-get-doorbell-s-absolute-offset-based-on-t.patch
 	patches.suse/drm-radeon-fix-a-possible-null-pointer-dereference.patch
