--- a/series.conf
+++ b/series.conf
@@ -14083,6 +14083,7 @@
 	patches.suse/1072-drm-amd-display-Modify-SMU-message-logs.patch
 	patches.suse/1073-drm-amd-display-VSIF-v3-set-Max-Refresh-Rate.patch
 	patches.suse/1074-drm-amd-display-Update-pmfw_driver_if-new-structure.patch
+	patches.suse/1075-drm-amd-display-Modify-Vmin-default-value.patch
 	patches.suse/drm-amd-display-Don-t-use-fsleep-for-PSR-exit-waits.patch
 	patches.suse/drm-amdkfd-get-doorbell-s-absolute-offset-based-on-t.patch
 	patches.suse/drm-radeon-fix-a-possible-null-pointer-dereference.patch
