--- a/series.conf
+++ b/series.conf
@@ -14086,6 +14086,7 @@
 	patches.suse/1075-drm-amd-display-Modify-Vmin-default-value.patch
 	patches.suse/1076-drm-amd-display-Revert-drm-amd-display-remove-duplic.patch
 	patches.suse/1077-drm-amd-display-Update-stream-mask.patch
+	patches.suse/1078-drm-amd-display-Update-dml-ssb-from-pmfw-clock-table.patch
 	patches.suse/drm-amd-display-Don-t-use-fsleep-for-PSR-exit-waits.patch
 	patches.suse/drm-amdkfd-get-doorbell-s-absolute-offset-based-on-t.patch
 	patches.suse/drm-radeon-fix-a-possible-null-pointer-dereference.patch
