--- a/series.conf
+++ b/series.conf
@@ -14089,6 +14089,7 @@
 	patches.suse/1078-drm-amd-display-Update-dml-ssb-from-pmfw-clock-table.patch
 	patches.suse/1079-drm-amd-display-Update-cursor-limits-based-on-SW-cur.patch
 	patches.suse/drm-amd-display-Don-t-use-fsleep-for-PSR-exit-waits.patch
+	patches.suse/1081-drm-amdgpu-add-hub-ctx_distance-in-setup_vmid_config.patch
 	patches.suse/drm-amdkfd-get-doorbell-s-absolute-offset-based-on-t.patch
 	patches.suse/drm-radeon-fix-a-possible-null-pointer-dereference.patch
 	patches.suse/drm-amdgpu-vkms-fix-a-possible-null-pointer-derefere.patch
