--- a/series.conf
+++ b/series.conf
@@ -14092,6 +14092,7 @@
 	patches.suse/1081-drm-amdgpu-add-hub-ctx_distance-in-setup_vmid_config.patch
 	patches.suse/1082-drm-amd-display-Revert-drm-amd-display-Add-a-check-f.patch
 	patches.suse/1083-drm-amd-display-Refactor-HWSS-into-component-folder.patch
+	patches.suse/1084-drm-amd-display-Don-t-set-dpms_off-for-seamless-boot.patch
 	patches.suse/drm-amdkfd-get-doorbell-s-absolute-offset-based-on-t.patch
 	patches.suse/drm-radeon-fix-a-possible-null-pointer-dereference.patch
 	patches.suse/drm-amdgpu-vkms-fix-a-possible-null-pointer-derefere.patch
