--- a/series.conf
+++ b/series.conf
@@ -14096,6 +14096,7 @@
 	patches.suse/1085-drm-amd-display-Refactor-DPG-test-pattern-logic-for-.patch
 	patches.suse/1086-drm-amd-display-Disable-SubVP-if-test-pattern-is-ena.patch
 	patches.suse/1087-drm-amd-display-Disable-virtual-links.patch
+	patches.suse/1088-drm-amd-display-3.2.255.patch
 	patches.suse/drm-amdkfd-get-doorbell-s-absolute-offset-based-on-t.patch
 	patches.suse/drm-radeon-fix-a-possible-null-pointer-dereference.patch
 	patches.suse/drm-amdgpu-vkms-fix-a-possible-null-pointer-derefere.patch
