--- a/series.conf
+++ b/series.conf
@@ -14098,6 +14098,7 @@
 	patches.suse/1087-drm-amd-display-Disable-virtual-links.patch
 	patches.suse/1088-drm-amd-display-3.2.255.patch
 	patches.suse/drm-amdkfd-get-doorbell-s-absolute-offset-based-on-t.patch
+	patches.suse/1090-drm-amdgpu-discovery-enable-DCN-3.5.0-support.patch
 	patches.suse/drm-radeon-fix-a-possible-null-pointer-dereference.patch
 	patches.suse/drm-amdgpu-vkms-fix-a-possible-null-pointer-derefere.patch
 	patches.suse/drm-mediatek-Fix-coverity-issue-with-unintentional-i.patch
