--- a/series.conf
+++ b/series.conf
@@ -14101,6 +14101,7 @@
 	patches.suse/1090-drm-amdgpu-discovery-enable-DCN-3.5.0-support.patch
 	patches.suse/1091-drm-amdgpu-Improve-MES-responsiveness-during-oversub.patch
 	patches.suse/1092-drm-amdgpu-vpe-remove-IB-end-boundary-requirement.patch
+	patches.suse/1093-drm-amdgpu-vpe-align-with-mcbp-changes.patch
 	patches.suse/drm-radeon-fix-a-possible-null-pointer-dereference.patch
 	patches.suse/drm-amdgpu-vkms-fix-a-possible-null-pointer-derefere.patch
 	patches.suse/drm-mediatek-Fix-coverity-issue-with-unintentional-i.patch
